@@ -1,47 +1,38 @@
 package br.com.cernebr.gateway_nacional.licitacoes.client;
 
 import br.com.cernebr.gateway_nacional.exception.ResourceUnavailableException;
-import br.com.cernebr.gateway_nacional.licitacoes.dto.AnexoDTO;
-import br.com.cernebr.gateway_nacional.licitacoes.dto.ItemLicitacaoDTO;
 import br.com.cernebr.gateway_nacional.licitacoes.dto.LicitacaoDetalheDTO;
 import br.com.cernebr.gateway_nacional.licitacoes.dto.LicitacaoResumoDTO;
-import br.com.cernebr.gateway_nacional.licitacoes.dto.Modalidade;
-import br.com.cernebr.gateway_nacional.licitacoes.dto.OrgaoDTO;
 import br.com.cernebr.gateway_nacional.licitacoes.dto.Portal;
-import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.fasterxml.jackson.annotation.JsonProperty;
 import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
 import lombok.extern.slf4j.Slf4j;
+import org.jsoup.Connection;
+import org.jsoup.Jsoup;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
-import org.springframework.web.client.HttpClientErrorException;
-import org.springframework.web.client.RestClient;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.time.OffsetDateTime;
-import java.time.ZoneOffset;
-import java.time.format.DateTimeFormatter;
-import java.util.Collections;
+import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
 
 /**
  * Cliente da Bolsa Nacional de Compras (BNC).
  *
- * <p><b>Estratégia:</b> a BNC operacionaliza o painel
- * {@code www.bnc.org.br/painel} através de chamadas AJAX para
- * {@code /api/painel/processos} (JSON puro). Interceptando essas chamadas
- * obtemos um contrato mais estável que o HTML. Mantém-se o cuidado de
- * tolerar variações de campo via {@link JsonIgnoreProperties}.</p>
+ * <p><b>Status atual (auditado 2026-05):</b> bnccompras.com roda o mesmo
+ * motor compartilhado da BLL — toda consulta pública passa por Google
+ * reCAPTCHA v2 sobre o endpoint AJAX {@code /Process/GetProcessByParams}.
+ * O mecanismo é idêntico ao do {@link BllComprasClient}: sem captcha
+ * solver externo a coleta direta é inviável.</p>
  *
- * <p><b>Particularidades:</b> a BNC publica em fuso America/Sao_Paulo sem
- * offset; promovemos para UTC. Valores monetários vêm como decimais
- * tipados — não há sanitização de string a fazer. Filtro por UF é
- * server-side; modalidade é aplicado em memória (a BNC mistura "PE",
- * "Pregão Eletrônico" e "Pregão" para a mesma modalidade canônica).</p>
+ * <p>O cliente faz a mesma sonda barata da BLL e devolve
+ * {@link ResourceUnavailableException} com diagnóstico explícito quando o
+ * marcador reCAPTCHA é detectado — o {@code LicitacoesService} preserva o
+ * sucesso parcial dos demais portais e marca {@code bnc} em
+ * {@code portaisFalhos}.</p>
+ *
+ * <p><b>Cobertura alternativa:</b> licitações públicas que tramitam via
+ * BNC também são publicadas no PNCP (Lei 14.133/2021) — o
+ * {@link ComprasNetClient} continua entregando o grosso da informação.</p>
  */
 @Slf4j
 @Component
@@ -49,19 +40,19 @@ public class BncClient implements LicitacaoClient {
 
     public static final String PROVIDER_NAME = "BNC";
 
-    private static final DateTimeFormatter ISO_LOCAL = DateTimeFormatter.ISO_LOCAL_DATE_TIME;
-    private static final ParameterizedTypeReference<BncResultado> RESULTADO_TYPE =
-            new ParameterizedTypeReference<>() {};
-    private static final ParameterizedTypeReference<BncProcesso> PROCESSO_TYPE =
-            new ParameterizedTypeReference<>() {};
+    private static final String SEARCH_PATH = "/Process/ProcessSearchPublic?param1=0";
+    private static final String RECAPTCHA_SITEKEY_MARKER = "grecaptcha";
 
-    private final RestClient restClient;
     private final String baseUrl;
+    private final String userAgent;
+    private final int timeoutMs;
 
-    public BncClient(RestClient.Builder builder,
-                     @Value("${gateway.licitacoes.bnc.base-url:https://www.bnc.org.br}") String baseUrl) {
-        this.restClient = builder.baseUrl(baseUrl).build();
+    public BncClient(@Value("${gateway.licitacoes.bnc.base-url:https://bnccompras.com}") String baseUrl,
+                     @Value("${gateway.licitacoes.bnc.user-agent:Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36}") String userAgent,
+                     @Value("${gateway.licitacoes.bnc.timeout-millis:8000}") int timeoutMs) {
         this.baseUrl = baseUrl;
+        this.userAgent = userAgent;
+        this.timeoutMs = timeoutMs;
     }
 
     @Override
@@ -77,53 +68,40 @@ public class BncClient implements LicitacaoClient {
     @Override
     @CircuitBreaker(name = "bncCB", fallbackMethod = "fallbackListar")
     public List<LicitacaoResumoDTO> listarAtivas(String uf, String modalidade) {
-        try {
-            BncResultado res = restClient.get()
-                    .uri(uriBuilder -> {
-                        var b = uriBuilder.path("/api/painel/processos")
-                                .queryParam("status", "publicado")
-                                .queryParam("pagina", 1)
-                                .queryParam("tamanho", 50);
-                        if (uf != null && !uf.isBlank()) {
-                            b.queryParam("uf", uf.toUpperCase());
-                        }
-                        return b.build();
-                    })
-                    .header("Accept", "application/json")
-                    .retrieve()
-                    .body(RESULTADO_TYPE);
-
-            if (res == null || res.processos == null) {
-                return Collections.emptyList();
-            }
-            return res.processos.stream()
-                    .map(this::toResumo)
-                    .filter(r -> matchesModalidade(r, modalidade))
-                    .toList();
-        } catch (HttpClientErrorException ex) {
-            throw new ResourceUnavailableException(PROVIDER_NAME,
-                    "BNC retornou HTTP " + ex.getStatusCode().value() + " ao listar processos.", ex);
-        }
+        probeOrFail();
+        return List.of();
     }
 
     @Override
     @CircuitBreaker(name = "bncCB", fallbackMethod = "fallbackDetalhe")
     public Optional<LicitacaoDetalheDTO> buscarDetalhe(String identificador) {
-        try {
-            BncProcesso p = restClient.get()
-                    .uri("/api/painel/processos/{id}", identificador)
-                    .header("Accept", "application/json")
-                    .retrieve()
-                    .body(PROCESSO_TYPE);
+        probeOrFail();
+        return Optional.empty();
+    }
 
-            if (p == null) return Optional.empty();
-            return Optional.of(toDetalhe(p));
-        } catch (HttpClientErrorException ex) {
-            if (ex.getStatusCode() == HttpStatus.NOT_FOUND) {
-                return Optional.empty();
+    /**
+     * Sonda a página pública (GET) para confirmar o bloqueio por reCAPTCHA.
+     * Mantém a forma idêntica à da BLL — o motor é o mesmo, alterações
+     * acompanharão a BLL em lockstep.
+     */
+    private void probeOrFail() {
+        try {
+            Connection.Response resp = Jsoup.connect(baseUrl + SEARCH_PATH)
+                    .userAgent(userAgent)
+                    .timeout(timeoutMs)
+                    .ignoreContentType(true)
+                    .execute();
+            String body = resp.body();
+            if (body != null && body.contains(RECAPTCHA_SITEKEY_MARKER)) {
+                throw new ResourceUnavailableException(PROVIDER_NAME,
+                        "BNC Compras exige Google reCAPTCHA v2 na consulta pública desde 2026-05; sem captcha solver configurado, os processos podem ser consultados via PNCP (ComprasNet) por força da Lei 14.133/2021.");
             }
+            log.warn("[BNC] Página de busca não exibiu marcador reCAPTCHA esperado — revisar estratégia de scraping.");
             throw new ResourceUnavailableException(PROVIDER_NAME,
-                    "BNC retornou HTTP " + ex.getStatusCode().value() + " ao buscar detalhe.", ex);
+                    "BNC Compras alterou a estrutura da página de busca; cliente do gateway precisa de auditoria.");
+        } catch (IOException ex) {
+            throw new ResourceUnavailableException(PROVIDER_NAME,
+                    "BNC indisponível durante sondagem inicial: " + ex.getMessage(), ex);
         }
     }
 
@@ -142,123 +120,4 @@ public class BncClient implements LicitacaoClient {
         throw new ResourceUnavailableException(PROVIDER_NAME,
                 "BNC indisponível ou Circuit Breaker aberto.", cause);
     }
-
-    private boolean matchesModalidade(LicitacaoResumoDTO r, String filtro) {
-        if (filtro == null || filtro.isBlank()) return true;
-        return r.modalidade() != null && r.modalidade().slug().equalsIgnoreCase(filtro);
-    }
-
-    private LicitacaoResumoDTO toResumo(BncProcesso p) {
-        String obj = p.objeto;
-        if (obj != null && obj.length() > 280) obj = obj.substring(0, 277) + "...";
-        return new LicitacaoResumoDTO(
-                Portal.BNC,
-                p.id,
-                p.numero,
-                obj,
-                Modalidade.infer(p.modalidade),
-                p.uf,
-                new OrgaoDTO(p.orgaoNome, null, p.orgaoCnpj, p.id, p.municipio, p.uf),
-                parse(p.dataAbertura),
-                parse(p.dataEncerramento),
-                p.valorEstimado,
-                baseUrl + "/processo/" + p.id
-        );
-    }
-
-    private LicitacaoDetalheDTO toDetalhe(BncProcesso p) {
-        List<ItemLicitacaoDTO> itens = p.itens == null ? List.of() :
-                p.itens.stream()
-                        .map(i -> new ItemLicitacaoDTO(
-                                i.numero,
-                                i.descricao,
-                                i.quantidade,
-                                i.unidade,
-                                i.codigoCatalogo,
-                                i.valorUnitario,
-                                i.valorTotal,
-                                i.exclusivoMeEpp))
-                        .toList();
-
-        List<AnexoDTO> anexos = p.anexos == null ? List.of() :
-                p.anexos.stream()
-                        .map(a -> new AnexoDTO(a.titulo, a.url, a.contentType, a.tamanho))
-                        .toList();
-
-        return new LicitacaoDetalheDTO(
-                Portal.BNC,
-                p.id,
-                p.numero,
-                p.objeto,
-                Modalidade.infer(p.modalidade),
-                p.modalidade,
-                p.uf,
-                new OrgaoDTO(p.orgaoNome, null, p.orgaoCnpj, p.id, p.municipio, p.uf),
-                parse(p.dataAbertura),
-                parse(p.dataEncerramento),
-                parse(p.dataPublicacao),
-                p.valorEstimado,
-                baseUrl + "/processo/" + p.id,
-                p.situacao,
-                itens,
-                anexos
-        );
-    }
-
-    private OffsetDateTime parse(String raw) {
-        if (raw == null || raw.isBlank()) return null;
-        try {
-            LocalDateTime local = LocalDateTime.parse(raw, ISO_LOCAL);
-            return local.atOffset(ZoneOffset.of("-03:00")).withOffsetSameInstant(ZoneOffset.UTC);
-        } catch (Exception ex) {
-            return null;
-        }
-    }
-
-    /* --------------------------- Payloads BNC --------------------------- */
-
-    @JsonIgnoreProperties(ignoreUnknown = true)
-    private record BncResultado(
-            List<BncProcesso> processos,
-            @JsonProperty("totalRegistros") Integer totalRegistros
-    ) {}
-
-    @JsonIgnoreProperties(ignoreUnknown = true)
-    private static final class BncProcesso {
-        public String id;
-        public String numero;
-        public String objeto;
-        public String modalidade;
-        public String uf;
-        public String municipio;
-        @JsonProperty("orgao") public String orgaoNome;
-        @JsonProperty("cnpjOrgao") public String orgaoCnpj;
-        @JsonProperty("abertura") public String dataAbertura;
-        @JsonProperty("encerramento") public String dataEncerramento;
-        @JsonProperty("publicacao") public String dataPublicacao;
-        @JsonProperty("valorEstimado") public BigDecimal valorEstimado;
-        public String situacao;
-        public List<BncItem> itens;
-        public List<BncAnexo> anexos;
-    }
-
-    @JsonIgnoreProperties(ignoreUnknown = true)
-    private record BncItem(
-            Integer numero,
-            String descricao,
-            BigDecimal quantidade,
-            String unidade,
-            @JsonProperty("codigoCatalogo") String codigoCatalogo,
-            @JsonProperty("valorUnitario") BigDecimal valorUnitario,
-            @JsonProperty("valorTotal") BigDecimal valorTotal,
-            @JsonProperty("exclusivoMeEpp") Boolean exclusivoMeEpp
-    ) {}
-
-    @JsonIgnoreProperties(ignoreUnknown = true)
-    private record BncAnexo(
-            String titulo,
-            String url,
-            @JsonProperty("contentType") String contentType,
-            Long tamanho
-    ) {}
 }
